--- a/projects/landingPage8/projectPage8.html
+++ b/projects/landingPage8/projectPage8.html
@@ -21,9 +21,13 @@
             </div>
 
             <div id="clip">
-                <video controls>
+                <!-- <video controls>
                     <source src="imagesLandingPage8/nivaClip.mp4" type="video/mp4">
-                </video>
+                </video> -->
+                <iframe src="https://www.youtube.com/embed/APbwSCYgdBc?si=py4yt42ZHdZdVk2S" title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
             </div>
 
             <div id="boxes-icon">
