--- a/displayPage/page4.html
+++ b/displayPage/page4.html
@@ -23,7 +23,8 @@
         <p>לורם איפסום או בקיצור ליפסום, הוא מלל מקובל וחסר משמעות המשמש “ממלא מקום” בעת עריכה, בתחום הדפוס, ההדפסה
             והפרסום.</p>
         <div id="btn">
-            <button><a class="link" href="../projects/landingPage4/projectPage4.html" target="_blank">לצפייה
+            <button><a class="link" href="../projects/landingPage4/projectPage4.html" target="_blank"
+                    rel="nooperner noreferrer">לצפייה
                     בפרויקט</a></button>
             <button><a class="link" href="../zipLandingPages/landingPage4.zip" download> להורדת הפרויקט <i
                         class="fa fa-file-archive-o"></i></a></button>
