--- a/displayPage/page8.html
+++ b/displayPage/page8.html
@@ -22,7 +22,8 @@
         <h1>ניבה קשת</h1>
         <p>מופע ילדים חדש וצבעוני</p>
         <div id="btn">
-            <button><a class="link" href="../projects/landingPage8/projectPage8.html" target="_blank">לצפייה
+            <button><a class="link" href="../projects/landingPage8/projectPage8.html" target="_blank"
+                    rel="nooperner noreferrer">לצפייה
                     בפרויקט</a></button>
             <button><a class="link" href="../zipLandingPages/landingPage8.zip" download> להורדת הפרויקט <i
                         class="fa fa-file-archive-o"></i></a></button>
