--- a/displayPage/page6.html
+++ b/displayPage/page6.html
@@ -22,7 +22,8 @@
         <h1>קפה טוב לבוקר טוב</h1>
         <p>לקבלת קופון לקפה חינם ומפנק שיפתח לכם את היום בחיוך, יש למלא את הפרטים:</p>
         <div id="btn">
-            <button><a class="link" href="../projects/landingPage6/projectPage6.html" target="_blank">לצפייה
+            <button><a class="link" href="../projects/landingPage6/projectPage6.html" target="_blank"
+                    rel="nooperner noreferrer">לצפייה
                     בפרויקט</a></button>
             <button><a class="link" href="../zipLandingPages/landingPage6.zip" download> להורדת הפרויקט <i
                         class="fa fa-file-archive-o"></i></a></button>
