--- a/displayPage/page7.html
+++ b/displayPage/page7.html
@@ -22,7 +22,8 @@
         <h1>ייעוץ חינם</h1>
         <p>לקבלת ייעוץ חינם, מוזמנים להשאיר פרטים ומומחה יחזור אליכם עם מענה.</p>
         <div id="btn">
-            <button><a class="link" href="../projects/landingPage7/projectPage7.html" target="_blank">לצפייה
+            <button><a class="link" href="../projects/landingPage7/projectPage7.html" target="_blank"
+                    rel="nooperner noreferrer">לצפייה
                     בפרויקט</a></button>
             <button><a class="link" href="../zipLandingPages/landingPage7.zip" download> להורדת הפרויקט <i
                         class="fa fa-file-archive-o"></i></a></button>
