--- a/index.html
+++ b/index.html
@@ -189,6 +189,8 @@
         </div>
     </article>
 
+    <div id="projectJS"></div>
+
     <footer id="footer">
         <div id="contact-us" class="d-xl-flex">
             <div id="image">
