--- a/index.html
+++ b/index.html
@@ -55,9 +55,12 @@
         <div id="skill">
             <img src="images/img-HTML.png" alt="html">
             <img src="images/img-CSS.png" alt="css">
-            <img src="images/img-SASS.png" alt="css">
-            <img src="images/img-Bootstrap.png" alt="css">
-            <img src="images/img-JS.png" alt="css">
+            <img src="images/img-SASS.png" alt="sass">
+            <img src="images/img-Bootstrap.png" alt="bootstrap">
+            <img src="images/img-JS.png" alt="js">
+            <img src="images/icon-es6.png" alt="es6">
+            <img src="images/icon-oop.png" alt="oop">
+            <img src="images/icon-api.png" alt="api">
         </div>
     </header>
 
@@ -94,7 +97,7 @@
                 <div class="card-body">
                     <h5 class="card-title">תן לנו להוביל אותך קדימה</h5>
                     <p class="card-text">דף נחיתה 1</p>
-                    <div id="icon" class="d-flex">
+                    <div id="icon">
                         <img src="images/img-HTML.png" alt="html">
                         <img src="images/img-CSS.png" alt="css">
                         <img src="images/img-JS.png" alt="js">
@@ -107,7 +110,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Here & Now</h5>
                     <p class="card-text">דף נחיתה 2</p>
-                    <div id="icon" class="d-flex flex-clowmn">
+                    <div id="icon">
                         <img src="images/img-HTML.png" alt="html">
                         <img src="images/img-CSS.png" alt="css">
                         <img src="images/img-JS.png" alt="js">
@@ -120,7 +123,7 @@
                 <div class="card-body">
                     <h5 class="card-title">תן לנו להוביל אותך קדימה</h5>
                     <p class="card-text">דף נחיתה 3</p>
-                    <div id="icon" class="d-flex flex-clowmn">
+                    <div id="icon">
                         <img src="images/img-HTML.png" alt="html">
                         <img src="images/img-CSS.png" alt="css">
                         <img src="images/img-JS.png" alt="js">
@@ -133,7 +136,7 @@
                 <div class="card-body">
                     <h5 class="card-title">לגלות את העולם</h5>
                     <p class="card-text">דף נחיתה 4</p>
-                    <div id="icon" class="d-flex flex-clowmn">
+                    <div id="icon">
                         <img src="images/img-HTML.png" alt="html">
                         <img src="images/img-CSS.png" alt="css">
                         <img src="images/img-JS.png" alt="js">
@@ -146,7 +149,7 @@
                 <div class="card-body">
                     <h5 class="card-title">לחשוב מחוץ לקופסה</h5>
                     <p class="card-text">דף נחיתה 5</p>
-                    <div id="icon" class="d-flex flex-clowmn">
+                    <div id="icon">
                         <img src="images/img-HTML.png" alt="html">
                         <img src="images/img-CSS.png" alt="css">
                         <img src="images/img-JS.png" alt="js">
@@ -159,7 +162,7 @@
                 <div class="card-body">
                     <h5 class="card-title">קפה טוב לבוקר טוב</h5>
                     <p class="card-text">דף נחיתה 6</p>
-                    <div id="icon" class="d-flex flex-clowmn">
+                    <div id="icon">
                         <img src="images/img-HTML.png" alt="html">
                         <img src="images/img-CSS.png" alt="css">
                         <img src="images/img-JS.png" alt="js">
@@ -172,7 +175,7 @@
                 <div class="card-body">
                     <h5 class="card-title">ייעוץ חינם</h5>
                     <p class="card-text">דף נחיתה 7</p>
-                    <div id="icon" class="d-flex flex-clowmn">
+                    <div id="icon">
                         <img src="images/img-HTML.png" alt="html">
                         <img src="images/img-CSS.png" alt="css">
                         <img src="images/img-JS.png" alt="js">
@@ -186,7 +189,7 @@
                     <h5 class="card-title">ניבה קשת</h5>
                     <p class="card-text">דף נחיתה 8
                     </p>
-                    <div id="icon" class="d-flex flex-clowmn">
+                    <div id="icon">
                         <img src="images/img-HTML.png" alt="html">
                         <img src="images/img-CSS.png" alt="css">
                         <img src="images/img-JS.png" alt="js">
@@ -206,10 +209,11 @@
                     <h5 class="card-title">משחק הזיכרון</h5>
                     <p class="card-text">פרויקט מספר 1
                     </p>
-                    <div id="icon" class="d-flex flex-clowmn">
+                    <div id="icon">
                         <img src="images/img-HTML.png" alt="html">
                         <img src="images/img-CSS.png" alt="css">
                         <img src="images/img-JS.png" alt="js">
+                        <img src="images/icon-es6.png" alt="es6">
                     </div>
                     <a href="#" class="btn btn-primary">לעמוד הפרויקט</a>
                 </div>
@@ -220,10 +224,12 @@
                     <h5 class="card-title">מזג אוויר</h5>
                     <p class="card-text">פרויקט מספר 2
                     </p>
-                    <div id="icon" class="d-flex flex-clowmn">
+                    <div id="icon">
                         <img src="images/img-HTML.png" alt="html">
                         <img src="images/img-CSS.png" alt="css">
                         <img src="images/img-JS.png" alt="js">
+                        <img src="images/icon-es6.png" alt="es6">
+                        <img src="images/icon-api.png" alt="api">
                     </div>
                     <a href="#" class="btn btn-primary">לעמוד הפרויקט</a>
                 </div>
@@ -234,10 +240,11 @@
                     <h5 class="card-title">סנייק</h5>
                     <p class="card-text">פרויקט מספר 3
                     </p>
-                    <div id="icon" class="d-flex flex-clowmn">
+                    <div id="icon">
                         <img src="images/img-HTML.png" alt="html">
                         <img src="images/img-CSS.png" alt="css">
                         <img src="images/img-JS.png" alt="js">
+                        <img src="images/icon-es6.png" alt="es6">
                     </div>
                     <a href="#" class="btn btn-primary">לעמוד הפרויקט</a>
                 </div>
@@ -248,10 +255,11 @@
                     <h5 class="card-title">איקס עיגול</h5>
                     <p class="card-text">פרויקט מספר 4
                     </p>
-                    <div id="icon" class="d-flex flex-clowmn">
+                    <div id="icon">
                         <img src="images/img-HTML.png" alt="html">
                         <img src="images/img-CSS.png" alt="css">
                         <img src="images/img-JS.png" alt="js">
+                        <img src="images/icon-es6.png" alt="es6">
                     </div>
                     <a href="#" class="btn btn-primary">לעמוד הפרויקט</a>
                 </div>
@@ -262,10 +270,11 @@
                     <h5 class="card-title">בונה מסכים</h5>
                     <p class="card-text"> פרויקט מספר 5
                     </p>
-                    <div id="icon" class="d-flex flex-clowmn">
+                    <div id="icon">
                         <img src="images/img-HTML.png" alt="html">
                         <img src="images/img-CSS.png" alt="css">
                         <img src="images/img-JS.png" alt="js">
+                        <img src="images/icon-es6.png" alt="es6">
                     </div>
                     <a href="#" class="btn btn-primary">לעמוד הפרויקט</a>
                 </div>
@@ -276,10 +285,12 @@
                     <h5 class="card-title">מלחמה קלפים</h5>
                     <p class="card-text">פרויקט מספר 6
                     </p>
-                    <div id="icon" class="d-flex flex-clowmn">
+                    <div id="icon">
                         <img src="images/img-HTML.png" alt="html">
                         <img src="images/img-CSS.png" alt="css">
                         <img src="images/img-JS.png" alt="js">
+                        <img src="images/icon-es6.png" alt="es6">
+                        <img src="images/icon-oop.png" alt="oop">
                     </div>
                     <a href="#" class="btn btn-primary">לעמוד הפרויקט</a>
                 </div>
@@ -290,10 +301,12 @@
                     <h5 class="card-title">מדינות עולם</h5>
                     <p class="card-text">פרויקט מספר 7
                     </p>
-                    <div id="icon" class="d-flex flex-clowmn">
+                    <div id="icon">
                         <img src="images/img-HTML.png" alt="html">
                         <img src="images/img-CSS.png" alt="css">
                         <img src="images/img-JS.png" alt="js">
+                        <img src="images/icon-es6.png" alt="es6">
+                        <img src="images/icon-api.png" alt="api">
                     </div>
                     <a href="#" class="btn btn-primary">לעמוד הפרויקט</a>
                 </div>
@@ -304,28 +317,15 @@
                     <h5 class="card-title">לומדת חשבון</h5>
                     <p class="card-text">פרויקט מספר 8
                     </p>
-                    <div id="icon" class="d-flex flex-clowmn">
+                    <div id="icon">
                         <img src="images/img-HTML.png" alt="html">
                         <img src="images/img-CSS.png" alt="css">
                         <img src="images/img-JS.png" alt="js">
+                        <img src="images/icon-es6.png" alt="es6">
                     </div>
                     <a href="#" class="btn btn-primary">לעמוד הפרויקט</a>
                 </div>
             </div>
-            <!-- <div class="card">
-                    <img src="images/task.png" class="card-img-top" alt="image of project task">
-                    <div class="card-body">
-                        <h5 class="card-title">משימות</h5>
-                        <p class="card-text">פרויקט מספר 9
-                        </p>
-                        <div id="icon" class="d-flex flex-clowmn">
-                            <img src="images/img-HTML.png" alt="html">
-                            <img src="images/img-CSS.png" alt="css">
-                            <img src="images/img-JS.png" alt="js">
-                        </div>
-                        <a href="#" class="btn btn-primary">לעמוד הפרויקט</a>
-                    </div>
-                </div> -->
         </div>
     </article>
 
