--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                         <img src="images/img-JS.png" alt="js">
                         <img src="images/icon-es6.png" alt="es6">
                     </div>
-                    <a href="#" class="btn btn-primary">לעמוד הפרויקט</a>
+                    <a href="./displayPage/displayPageJS/memroyGameDp.html" class="btn btn-primary">לעמוד הפרויקט</a>
                 </div>
             </div>
             <div class="card">
