--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         </svg></a></li>
                 <li class="hideOnMobile"><a href="#main"><i class="fa fa-fw fa-home"></i>ראשי</a></li>
                 <li class="hideOnMobile"><a href="#section"><i class="fa fa-address-card"></i>אודות</a></li>
-                <li class="hideOnMobile"><a href="#article"><i class="fa fa-laptop"></i>שירותים</a></li>
+                <li class="hideOnMobile"><a href="#titleToProject"><i class="fa fa-laptop"></i>שירותים</a></li>
                 <li class="hideOnMobile"><a href="#footer"><i class="fa fa-fw fa-envelope"></i>צור קשר</a></li>
                 <li>
                     <p>אגם רחמני</p>
@@ -38,7 +38,7 @@
                         </svg></a></li>
                 <li onclick="hideSideBar()"><a href="#main"><i class="fa fa-fw fa-home"></i>ראשי</a></li>
                 <li onclick="hideSideBar()"><a href="#section"><i class="fa fa-address-card"></i>אודות</a></li>
-                <li onclick="hideSideBar()"><a href="#article"><i class="fa fa-laptop"></i>שירותים</a></li>
+                <li onclick="hideSideBar()"><a href="#titleToProject"><i class="fa fa-laptop"></i>שירותים</a></li>
                 <li onclick="hideSideBar()"><a href="#footer"><i class="fa fa-fw fa-envelope"></i>צור קשר</a></li>
             </ul>
         </nav>
