--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                         <img src="images/icon-es6.png" alt="es6">
                         <img src="images/icon-api.png" alt="api">
                     </div>
-                    <a href="#" class="btn btn-primary">לעמוד הפרויקט</a>
+                    <a href="./displayPage/displayPageJS/weatherDp.html" class="btn btn-primary">לעמוד הפרויקט</a>
                 </div>
             </div>
             <div class="card">
@@ -246,7 +246,7 @@
                         <img src="images/img-JS.png" alt="js">
                         <img src="images/icon-es6.png" alt="es6">
                     </div>
-                    <a href="#" class="btn btn-primary">לעמוד הפרויקט</a>
+                    <a href="./displayPage/displayPageJS/snakeDp.html" class="btn btn-primary">לעמוד הפרויקט</a>
                 </div>
             </div>
             <div class="card">
@@ -261,7 +261,7 @@
                         <img src="images/img-JS.png" alt="js">
                         <img src="images/icon-es6.png" alt="es6">
                     </div>
-                    <a href="#" class="btn btn-primary">לעמוד הפרויקט</a>
+                    <a href="./displayPage/displayPageJS/ticTacToeDp.html" class="btn btn-primary">לעמוד הפרויקט</a>
                 </div>
             </div>
             <div class="card">
@@ -276,7 +276,7 @@
                         <img src="images/img-JS.png" alt="js">
                         <img src="images/icon-es6.png" alt="es6">
                     </div>
-                    <a href="#" class="btn btn-primary">לעמוד הפרויקט</a>
+                    <a href="./displayPage/displayPageJS/builderPageDp.html" class="btn btn-primary">לעמוד הפרויקט</a>
                 </div>
             </div>
             <div class="card">
@@ -292,7 +292,7 @@
                         <img src="images/icon-es6.png" alt="es6">
                         <img src="images/icon-oop.png" alt="oop">
                     </div>
-                    <a href="#" class="btn btn-primary">לעמוד הפרויקט</a>
+                    <a href="./displayPage/displayPageJS/warCardsDp.html" class="btn btn-primary">לעמוד הפרויקט</a>
                 </div>
             </div>
             <div class="card">
@@ -308,7 +308,7 @@
                         <img src="images/icon-es6.png" alt="es6">
                         <img src="images/icon-api.png" alt="api">
                     </div>
-                    <a href="#" class="btn btn-primary">לעמוד הפרויקט</a>
+                    <a href="./displayPage/displayPageJS/countriesDp.html" class="btn btn-primary">לעמוד הפרויקט</a>
                 </div>
             </div>
             <div class="card">
@@ -323,7 +323,7 @@
                         <img src="images/img-JS.png" alt="js">
                         <img src="images/icon-es6.png" alt="es6">
                     </div>
-                    <a href="#" class="btn btn-primary">לעמוד הפרויקט</a>
+                    <a href="./displayPage/displayPageJS/mathDp.htm" class="btn btn-primary">לעמוד הפרויקט</a>
                 </div>
             </div>
         </div>
