--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
         <div id="main">
             <div id="width-main">
                 <h1>תיק עבודות</h1>
-                <p>ברוכים הבאים לאתר שלי, כאן תוכלו למצוא מגוון דוגמאות של דפי נחיתה אשר בנויים ממגוון שפות תכנות וכלי
+                <p>ברוכים הבאים לאתר שלי, כאן תוכלו למצוא מגוון דוגמאות של פרוייקטים כמו דפי נחיתה / משחקים / אתרים אשר
+                    בנויים
+                    ממגוון שפות תכנות וכלי
                     פיתוח
                     שונים המתאימים לאתרי אינטרנט.
                     לכל שאלה או בקשה מוזמנים להשאיר פרטים בחלק של צור קשר באתר למטה,<br> אשמח לתת לכם מענה &#128522</p>
